update the change that made

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
    <header id="home">
       <div class="cont fade" aria-label="main-header">
          <nav>
-            <button class="nav-toggle" aria-label="open navigation">
+            <button id="toggle" class="nav-toggle" aria-label="open navigation">
                <span class="hamburger"></span>
             </button>
-            <ul class="nav">
+            <ul class="nav" id="nav">
                <li class="items active"><a href="#home">Home</a></li>
                <li class="items"><a href="#about">About Us</a></li>
                <li class="items"><a href="#menu">Menu</a></li>
@@ -171,10 +171,10 @@
                <i class="fa-solid fa-star"></i>
                <i class="fa-solid fa-star-half"></i>
             </div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum iure itaque consectetur nulla
-               suscipit,
-               voluptates tempore veritatis nobis qui dolores a esse earum, nemo iste veniam odit, consequatur ipsam ut.
-               Lorem ipsum dolor sit amet.
+            <p>We were at The marrakesh a few weeks ago with some clients from french . I am finally getting back to
+               tell you that we had a wonderful evening! The food, the service, the samiFood, EVERYTHING was perfect!
+               and Thank you so much for hosting us. We hope we can come back again soon.
+               Keep up the good work !
             </p>
          </article>
       </div>
@@ -262,6 +262,9 @@
          </div>
       </div>
    </footer>
+   <a id="back-to-top" aria-label="scrollToTop" class="scrollTop tv-back-to-top" href="javascript:void(0);">
+      <i class="fa fa-caret-up" aria-hidden="true"></i>
+   </a>
    <script defer src='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.js'></script>
    <script defer src="./js/app.js"></script>
 </body>
